# XWS_toolkit

./: CMakeLists.txt  example1.cpp  hello.cpp  main.cpp  text_box.cpp
include/: MyDialog.h  button.h  radiobutton.h  text.h  text_box.h  text_input.h  widget.h  window.h
src/: MyDialog.cpp  button.cpp  radiobutton.cpp  text.cpp  text_box.cpp  text_input.cpp  widget.cpp  window.cpp
